[package]
name = "oxicrab-tools-browser"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Browser tool for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chromiumoxide = { version = "0.9", default-features = false }
futures-util = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
