[package]
name = "oxicrab-tools-google"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Google tools for the oxicrab framework (Gmail, Calendar, Tasks)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls", "charset", "http2", "form"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
regex = { workspace = true }
oauth2 = "5.0"
dirs = { workspace = true }
open = "5.0"
url = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
oxicrab-memory = { path = "../oxicrab-memory", default-features = false }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
tempfile = { workspace = true }
