[package]
name = "oxicrab-tools-obsidian"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Obsidian tool for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
oxicrab-memory = { path = "../oxicrab-memory", default-features = false }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
hex = "0.4"
sha2 = "0.10"
url = "2.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "charset", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.25"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6.5"
