[package]
name = "oxicrab-tools-obsidian"
version = "0.16.4"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Obsidian tool for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
oxicrab-memory = { path = "../oxicrab-memory", default-features = false }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls", "charset", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
