[package]
name = "oxicrab-tools-rss"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "RSS tool for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
oxicrab-memory = { path = "../oxicrab-memory", default-features = false, features = ["rss"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
feed-rs = "2"
futures-util = "0.3"
nalgebra = "0.33"
rand = "0.8"
regex = { workspace = true }
rand_distr = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "charset", "http2"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.22", features = ["v4"] }
