[package]
name = "oxicrab-tools-rss"
version = "0.16.3"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "RSS tool for the oxicrab framework"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
oxicrab-memory = { path = "../oxicrab-memory", default-features = false, features = ["rss"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
feed-rs = "2"
futures-util = { workspace = true }
nalgebra = "0.34"
rand = "0.10"
regex = { workspace = true }
rand_distr = "0.6"
reqwest = { workspace = true, features = ["json", "rustls", "charset", "http2"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
