[package]
name = "oxicrab-tools-system"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "System tools for the oxicrab framework (filesystem, shell, tmux)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
brush-parser = "0.3"
cap-std = "4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
libc = "0.2"
regex = { workspace = true }
serde_json = { workspace = true }
shlex = "1.3"
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3.25"
tokio = { version = "1", features = ["macros", "rt"] }
