[package]
name = "oxicrab-tools-system"
version = "0.16.9"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "System tools for the oxicrab framework (filesystem, shell, tmux)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
brush-parser = "0.3"
cap-std = "4"
chrono = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
shlex = "1.3"
tokio = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
