[package]
name = "oxicrab-tools-web"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Web tools for the oxicrab framework (HTTP, Reddit, WebSearch, WebFetch)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
fastrand = "2.0"
html-escape = "0.2"
regex = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls", "charset", "http2", "query"] }
scraper = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6.5"
