[package]
name = "oxicrab-tools-web"
version = "0.16.3"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Web tools for the oxicrab framework (HTTP, Reddit, WebSearch, WebFetch)"
license = "MIT"

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
html-escape = "0.2"
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream", "rustls", "charset", "http2", "query"] }
scraper = "0.26"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
