[package]
name = "oxicrab-transcription"
version = "0.15.0"
edition = "2024"
authors = ["James Turnbull <james@ltl.so>"]
description = "Voice transcription (Whisper cloud + local whisper.cpp) for the oxicrab framework"
license = "MIT"

[features]
local-whisper = ["dep:whisper-rs"]

[dependencies]
oxicrab-core = { path = "../oxicrab-core" }
anyhow = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream", "rustls", "charset", "http2", "blocking"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
whisper-rs = { version = "0.16", features = ["tracing_backend"], optional = true }
